syntax = "proto3";

package statistics;

option go_package = "github.com/baccala1010/e-commerce/statistics/pkg/pb;pb";

service StatisticsService {
  rpc GetUserOrdersStatistics (UserOrderStatisticsRequest) returns (UserOrderStatisticsResponse);
}

message UserOrderStatisticsRequest {
  string user_id = 1;
}

message UserOrderStatisticsResponse {
  int32 order_count = 1;
}
